2005-01-03  JP Rosevear  <jpr@novell.com>

	* itip-view.c (itip_view_add_upper_info_item_printf): utility
	routine to make it easier to add info items
	(itip_view_add_lower_info_item_printf): ditto

	* itip-view.h: new protos

	* itip-formatter.c: use new printf routines everyhwere it makes
	sense
	
2005-01-03  JP Rosevear  <jpr@novell.com>
	
	* itip-formatter.c (find_cal_opened_cb): move the adjust item work
	here when we actually have the calendar
	(pitip_free): implement a free function
	(find_cal_opened_cb): check the methods instead of the show
	selector member
	(find_cal_opened_cb): default to true for the rsvp setting

2005-01-03  JP Rosevear  <jpr@novell.com>
	
	* itip-view.h: add response enums

	* itip-view.c (set_buttons): fiddle with button names and response enums

	* itip-formatter.c (find_server): don't include our uid in the
	conflicts search
	(update_attendee_status): update the status of the attendee and
	save it out
	(adjust_item): get relevant properties for items that might
	contain them if sent from an attendee
	(get_real_item): get the actual, current item
	(send_item): send the item
	(view_response_cb): handle REPLY and REFRESH requests
	(format_itip_object): adjust the item if necessary and set the
	attendee for reply/refresh; prevent crash if no description
	(pitip_free): skeleton free function
	(format_itip): load delete message setting
	(delete_toggled_cb): set delete message setting based on toggle
	(itip_formatter_page_factory): make the delete message check box
	work

	* Makefile.am: install e-error messages

2005-01-03  JP Rosevear  <jpr@novell.com>
	
	* itip-view.h: new protos, signal

	* itip-view.c (set_info_items): be more generic so both upper and
	lower setting can use it
	(set_upper_info_items): set the upper info items
	(set_lower_info_items): ditto for lower items
	(itip_view_destroy): clear both sets of info items
	(itip_view_class_init): add source selected signalo